Created the html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,2 +1,11 @@
-<h1>Hello</h1>
-<p>Something</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Website</title>
+</head>
+<body>
+    <h1>Popi popi po popi po</h1>
+</body>
+</html>
