--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="../CSS/navbar.css">
+    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="stylesheet" href="../CSS/mediaqueri.css">
+    <link rel="stylesheet" href="../CSS/parallax.css">
 </head>
-<body>
 
+<body>
     <header class="topbar">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, saepe voluptatem expedita sequi eos perferendis amet quaerat fugiat eveniet? Repellat ea autem vero sint natus! Quia alias quibusdam earum tempore!</h1>
+        <h1>Page created to introduce new Pokémon players</h1>
     </header>
-  
+
     <div class="container">
-      <aside class="sidebar">
-        <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pagina2.html">Página 2</a></li>
-            <li><a href="pagina3.html">Página 3</a></li>
-            <li><a href="pagina4.html">Página 4</a></li>
-          </ul>
-        </nav>
-      </aside>
-  
-      <main class="main-content">
-        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nemo rerum alias similique. Laborum mollitia dolor molestiae porro adipisci, modi ad, sunt nulla architecto unde ab dolores voluptas numquam officiis.</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nihil fugit soluta laudantium quidem vel numquam, quam alias dolore veniam eum dignissimos? Distinctio voluptatibus perferendis deserunt porro modi sint doloremque..</p>
-      </main>
+        <aside class="sidebar">
+            <nav>
+                <ul class="navbar">
+                    <li><a class="active" href="home.html">Inicio</a></li>
+                    <li><a href="fav.html">Favourite</a></li>
+                    <li><a href="pokegen.html">Pokémon Generator</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <div class="parallax"></div>
+        <main class="main-content">
+            <div style="height:1000px;background-color:rgb(255, 255, 255);font-size:36px">
+                Scroll Up and Down this page to see the parallax scrolling effect.
+                This div is just here to enable scrolling.
+                Tip: Try to remove the background-attachment property to remove the scrolling effect.
+            </div>
+            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nemo rerum alias similique. Laborum
+                mollitia dolor molestiae porro adipisci, modi ad, sunt nulla architecto unde ab dolores voluptas numquam
+                officiis.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nihil fugit soluta laudantium quidem
+                vel numquam, quam alias dolore veniam eum dignissimos? Distinctio voluptatibus perferendis deserunt
+                porro modi sint doloremque..</p>
+        </main>
     </div>
-  
-  </body>
+
+</body>
+
 </html>
