--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-    <header class="topbar">
-        <h1>Page created to introduce new Pokémon players</h1>
-    </header>
+
 
     <div class="container">
         <aside class="sidebar">
@@ -26,6 +24,29 @@
                 </ul>
             </nav>
         </aside>
+    </div>
+    <div class="item1">
+        PAGE CREATED TO INTRODUCE NEW PLAYERS
+    </div>
+    <div class="item2">
+        We are two young programmers with a deep passion for both technology and the fascinating world of Pokémon. This website is one of our most exciting projects, combining our love for programming with our enthusiasm for everything related to Pokémon. Our goal is simple: to create a space where anyone who wants to learn about Pokémon can find valuable resources, guides, and insightful information. <br> <br>
+        As we grow and evolve as developers, we are committed to shsaring everything we learn along the way with the community. For us, the best way to learn is by working on real-world projects, and this website is the perfect example of that. Whether it’s exploring the intricate mechanics of the games or delving into strategy tips, we aim to provide content that helps everyone—from beginners to experienced trainers—level up their Pokémon knowledge. <br> <br>
+        We believe that the Pokémon universe has something for everyone, whether you’re here to catch ‘em all or dive deeper into competitive battling. With this website, we’re not just creating a learning resource, but also building a community of like-minded individuals who share the same passion. Join us as we embark on this adventure of discovery, fun, and learning! <br> <br>
+        Our mission is to create a platform that’s accessible, fun, and full of helpful content for anyone wanting to dive deeper into the world of Pokémon. From the origins of the series to the latest games, we aim to provide a space where Pokémon fans of all levels can connect, learn, and grow together. <br> <br>
+        This is our first creation, and we are excited to share it with you. We’ve used Visual Studio Code as our development environment to write all the necessary scripts and code for building this page.
+        <ul>
+            <li>GIT: We’ve learned how to use GIT for version control, which allows us to better manage code changes and work collaboratively.</li> <br>
+            <li>HTML: We’ve used HTML to structure the content of the webpage, ensuring it is easy to access and use for our users.</li> <br>
+            <li>CSS: We’ve applied our CSS knowledge to design and customize the visual appearance of the page, creating a clean, modern, and attractive interface.</li> <br>
+            <li>JavaScript: To add interactivity, such as an image carousel and integration with the Pokémon API, we’ve used JavaScript, enhancing the user experience with dynamic features.</li> <br>
+        </ul>
+        We hope you enjoy it (❁´◡`❁) <br> <br>
+        This is our GitHub repo where we have our page.
+    </div>
+    <div>
+    </div>
+    <div class="item3">
+        <img src="https://cdn.creazilla.com/icons/7915997/github-icon-lg.png" width="100" alt="Logo de Git">
     </div>
 </body>
 
