start home page

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 
 <head>
     <meta charset="UTF-8">
@@ -12,10 +12,6 @@
 </head>
 
 <body>
-    <header class="topbar">
-        <h1>Page created to introduce new Pokémon players</h1>
-    </header>
-
     <div class="container">
         <aside class="sidebar">
             <nav>
@@ -27,22 +23,30 @@
                 </ul>
             </nav>
         </aside>
-        <div class="parallax"></div>
-        <main class="main-content">
-            <div style="height:1000px;background-color:rgb(255, 255, 255);font-size:36px">
-                Scroll Up and Down this page to see the parallax scrolling effect.
-                This div is just here to enable scrolling.
-                Tip: Try to remove the background-attachment property to remove the scrolling effect.
-            </div>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nemo rerum alias similique. Laborum
-                mollitia dolor molestiae porro adipisci, modi ad, sunt nulla architecto unde ab dolores voluptas numquam
-                officiis.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nihil fugit soluta laudantium quidem
-                vel numquam, quam alias dolore veniam eum dignissimos? Distinctio voluptatibus perferendis deserunt
-                porro modi sint doloremque..</p>
-        </main>
-    </div>
 
+        <div class="main-content">
+            <div class="item1">
+                <h1>Welcome to Pokémon!</h1>
+                <p>If you are new, this is the perfect site to strat your adventure as a Pokémon trainer</p>
+            </div>
+
+            <div class="item2">
+                <h2>Comença aquí</h2>
+
+
+                <p>Look for guides, tools, videos, and advice to learn about the game, Pokémon types, and how to prepare for battle. We recomend a few based on our expirience:</p>
+                <div class="button-group">
+                    <a target="_blank" href="https://play.pokemonshowdown.com/" class="button">To play pokémon online and build your own teams</a>
+                    <a target="_blank" href="https://www.smogon.com/" class="button">To learn about competitive and how to use your pokemons and it's build</a>
+                    <a target="_blank" href="https://bulbapedia.bulbagarden.net/wiki/Browse:Video_Games" class="button">English community wiki</a>
+                </div>
+            </div>
+
+            <div class="quote">
+                <blockquote>"It's never too late to become a Pokémon Master!"</blockquote>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
