--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,40 +12,38 @@
 </head>
 
 <body>
-    <div class="container">
-        <aside class="sidebar">
-            <nav>
-                <ul class="navbar">
-                    <li><a class="active" href="home.html">Inicio</a></li>
-                    <li><a href="fav.html">Favourite</a></li>
-                    <li><a href="pokegen.html">Pokémon Generator</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </nav>
-        </aside>
+  <div class="container">
+      <aside class="sidebar">
+          <nav>
+              <ul class="navbar">
+                  <li><a class="active" href="home.html">Inicio</a></li>
+                  <li><a href="fav.html">Favourite</a></li>
+                  <li><a href="pokegen.html">Pokémon Generator</a></li>
+                  <li><a href="about.html">About Us</a></li>
+              </ul>
+          </nav>
+      </aside>
+      <div class="main-content">
+          <div class="item1">
+              <h1>Welcome to Pokémon!</h1>
+              <p>If you are new, this is the perfect site to strat your adventure as a Pokémon trainer</p>
+          </div>
 
-        <div class="main-content">
-            <div class="item1">
-                <h1>Welcome to Pokémon!</h1>
-                <p>If you are new, this is the perfect site to strat your adventure as a Pokémon trainer</p>
-            </div>
-
-            <div class="item2">
-                <h2>Comença aquí</h2>
-
-
-                <p>Look for guides, tools, videos, and advice to learn about the game, Pokémon types, and how to prepare for battle. We recomend a few based on our expirience:</p>
-                <div class="button-group">
-                    <a target="_blank" href="https://play.pokemonshowdown.com/" class="button">To play pokémon online and build your own teams</a>
-                    <a target="_blank" href="https://www.smogon.com/" class="button">To learn about competitive and how to use your pokemons and it's build</a>
-                    <a target="_blank" href="https://bulbapedia.bulbagarden.net/wiki/Browse:Video_Games" class="button">English community wiki</a>
-                </div>
-            </div>
-
-            <div class="quote">
-                <blockquote>"It's never too late to become a Pokémon Master!"</blockquote>
-            </div>
+          <div class="item2">
+              <h2>Start here</h2>
+              <p>Look for guides, tools, videos, and advice to learn about the game, Pokémon types, and how to prepare for battle. We recomend a few based on our expirience:</p>
+              <div class="button-group">
+                  <a target="_blank" href="https://play.pokemonshowdown.com/" class="button">To play pokémon online and build your own teams</a>
+                  <a target="_blank" href="https://www.smogon.com/" class="button">To learn about competitive and how to use your pokemons and it's build</a>
+                  <a target="_blank" href="https://bulbapedia.bulbagarden.net/wiki/Browse:Video_Games" class="button">English community wiki</a>
+              </div>
+          </div>
+          <div class="quote">
+            <h3>Quote of the day</h3>
+            <blockquote></blockquote>
         </div>
-    </div>
+        </div>
+      </div>        
+    <script src="../JS/quote.js"></script>
   </body>
 </html>
