--- a/HTML/pokegen.html
+++ b/HTML/pokegen.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon generator</title>
+    <link rel="stylesheet" href="../CSS/navbar.css">
+    <link rel="stylesheet" href="../CSS/fav.css">
+    <link rel="stylesheet" href="../CSS/mediaqueri.css">
 </head>
 <body>
-    <h1>Click to see a ranom pokemon</h1>
-    <button id="pokemon-button">Get pokemon</button>
-    <div id="pokemon-container">
+    <div class="container">
+        <aside class="sidebar">
+            <nav>
+                <ul class="navbar">
+                    <li><a href="home.html">Inicio</a></li>
+                    <li><a href="fav.html">Favourite</a></li>
+                    <li><a class="active" href="pokegen.html">Pokémon Generator</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <h1>Click to see a ranom pokemon</h1>
+        <button id="pokemon-button">Get pokemon</button>
+        <div id="pokemon-container">
+        </div>
+        <script src="../JS/pokegen.js"></script>
     </div>
-    <script src="../JS/pokegen.js"></script>
+
 </body>
 </html>
