--- a/HTML/home.html
+++ b/HTML/home.html
@@ -29,11 +29,21 @@
                 <h1>Welcome to Pokémon!</h1>
                 <p>If you are new, this is the perfect site to strat your adventure as a Pokémon trainer</p>
             </div>
-
+            
+            <h2>What is pokémon?</h2>
             <div class="item2">
-                <h2>Comença aquí</h2>
 
+                <p class="description">
+                    Pokémon is a Japanese media franchise consisting of video games, animated series and films, a trading card game, and other related media. The franchise takes place in a shared universe in which humans co-exist with creatures known as Pokémon, a large variety of species endowed with special powers. The franchise's primary target audience is children aged 5 to 12, but it is known to attract people of all ages. <br> <br>
 
+                    The franchise originated as a pair of role-playing games developed by Game Freak, from an original concept by its founder, Satoshi Tajiri. Released on the Game Boy on 27 February 1996, the games became sleeper hits and were followed by manga series, a trading card game, and anime series and films. From 1998 to 2000, Pokémon was exported to the rest of the world, creating an unprecedented global phenomenon dubbed "Pokémania". By 2002, the craze had ended, after which Pokémon became a fixture in popular culture, with new products being released to this day. In the summer of 2016, the franchise spawned a second craze with the release of Pokémon Go, an augmented reality game developed by Niantic. Pokémon has since been estimated to be the world's highest-grossing media franchise and one of the best-selling video game franchises. <br> <br>
+                    
+                    Pokémon has an uncommon ownership structure. Unlike most IPs, which are owned by one company, Pokémon is jointly owned by three: Nintendo, Game Freak, and Creatures. Game Freak develops the core series role-playing games, which are published by Nintendo exclusively for their consoles, while Creatures manages the trading card game and related merchandise, occasionally developing spin-off titles. The three companies established the Pokémon Company (TPC) in 1998 to manage the Pokémon property within Asia. The Pokémon anime series and films are co-owned by Shogakukan. Since 2009, the Pokémon Company International (TPCi), a subsidiary of TPC, has managed the franchise in all regions outside Asia.
+                </p>
+
+                <img src="../images/pokemaster_332236.jpg" width="100" alt="" class="fotoDesc">
+            </div>
+            <div class="item3">
                 <p>Look for guides, tools, videos, and advice to learn about the game, Pokémon types, and how to prepare for battle. We recomend a few based on our expirience:</p>
                 <div class="button-group">
                     <a target="_blank" href="https://play.pokemonshowdown.com/" class="button">To play pokémon online and build your own teams</a>
